# HackathonOpenAI

./: README.md  pyproject.toml
data/: download_uso_suelos_data.py
data/demo_data/: doc.kml
data/sitios_prioritarios/: Sitios_Prioritarios.dbf  Sitios_Prioritarios.sbn  Sitios_Prioritarios.sbx  Sitios_Prioritarios.shx
hackathonopenai/: __init__.py  base_assistant.py  constants.py  hydrological.py  land_usage.py  national_monuments.py  paleontological_potential.py  priority_sites.py
notebooks/: criteria_plot.ipynb  hydrological.ipynb  monumentos_nacionales.ipynb  paleontogical_potential.ipynb  parques_nacionales.ipynb  sitios_prioritarios.ipynb  uso_suelos.ipynb
ui/: Home.py  example.py
utils/: environmental_evaluation_prompts.py
